test/sema/trait_objects/coerce_ptr_to_impl_arg_err.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
trait A {}

trait B {}

struct S {
  impl A;
}

fn foo(x: *impl A) {}
fn bar(x: *impl B) {}

fn main() {
  // CHECK: [[# @LINE + 1 ]]:7: error: cannot unify '*mut S' with '*impl A'
  foo(gcMut(S{}));

  // CHECK: [[# @LINE + 1 ]]:7: error: cannot satisfy constraint 'S : B'
  bar(gc(S{}));
}
